--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.kafka-stream</groupId>
-	<artifactId>demo</artifactId>
+	<artifactId>kafka-stream-demo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>demo</name>
+	<name>kafka-stream-demo</name>
 	<description>Demp project for Kafka Stream</description>
 	<properties>
 		<java.version>17</java.version>
